<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.example.moviedbsearch.ui.detail.DetailViewModel"/>
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="@color/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">

                <FrameLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:imageUrl="@{viewmodel.movieData.posterPath}"
                        tools:src="@drawable/ic_image"
                        android:background="#00000000"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/background_trans_pic"
                        android:alpha="0.2"/>


                    <ImageView
                        android:layout_width="170dp"
                        android:layout_height="250dp"
                        android:layout_gravity="center"
                        app:imageUrl="@{viewmodel.movieData.posterPath}"
                        tools:src="@drawable/ic_image"
                        android:scaleType="centerCrop"
                        android:background="@drawable/corner_radius_transparent"
                        android:contentDescription="@string/main_picture" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="330dp"
                        android:textAlignment="center"
                        android:textSize="22sp"
                        android:text="@{viewmodel.movieData.title}"
                        tools:text="movie name" />

                    <RatingBar
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="380dp"
                        android:theme="@style/RatingBar"
                        android:numStars="5"
                        android:rating="@{viewmodel.rating}"
                        android:isIndicator="true"
                        android:stepSize="0.1"/>
                </FrameLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/detail_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    app:layout_collapseMode="pin">

                    <ImageView
                    android:id="@+id/backImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_arrow_back" />


                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:clipToPadding="true"
            android:fitsSystemWindows="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp">

                <TextView
                    android:id="@+id/summarytxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/summary"
                    android:textStyle="bold"
                    android:textSize="28sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/detailstxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:text="@{viewmodel.movieData.overview}"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/summarytxt"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/videostxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/videos"
                    android:textStyle="bold"
                    android:textSize="28sp"
                    app:layout_constraintTop_toBottomOf="@+id/detailstxt"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="20dp"/>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_videos"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/videostxt"
                    android:nestedScrollingEnabled="false"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:videolist="@{viewmodel.videoList}" />

                <TextView
                    android:id="@+id/casttxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cast"
                    android:textStyle="bold"
                    android:textSize="28sp"
                    app:layout_constraintTop_toBottomOf="@+id/recycler_view_videos"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="20dp"/>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_cast"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/casttxt"
                    android:nestedScrollingEnabled="false"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:castlist="@{viewmodel.castList}" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
